--- a/src/scss/tags.scss
+++ b/src/scss/tags.scss
@@ -34,6 +34,7 @@
     background: $main-color;
     border-radius: 5px;
     margin-right: 16px;
+    margin-bottom: 7px;
     font-weight: normal;
     font-size: 18px;
     color: $color-white;
