--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -16,6 +16,10 @@
     justify-content: center;
     font-weight: 600;
     font-size: 16px;
+    a {
+      color: #000;
+      text-decoration: none;
+    }
     img {
       margin: 0 4px;
       height: 23px;
