--- a/src/scss/tags.scss
+++ b/src/scss/tags.scss
@@ -7,7 +7,6 @@
     border-radius: 20px;
     padding: 20px 30px 50px 30px;
     box-shadow: $box-shadow;
-    font-family: Montserrat;
     margin-bottom: 50px;
   }
   &-category,
@@ -17,26 +16,26 @@
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
   }
   &-function {
     margin-bottom: 0;
   }
   &-title {
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
     color: $text-color;
     margin-bottom: 20px;
     flex-basis: 100%;
   }
   &-item {
-    padding: 9px 13px;
+    padding: 3px 10px 7px 10px;
     background: $main-color;
     border-radius: 5px;
     margin-right: 16px;
     margin-bottom: 7px;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 16px;
     color: $color-white;
   }
 }
