fix photo slider

--- a/src/scss/program.scss
+++ b/src/scss/program.scss
@@ -70,7 +70,7 @@
   }
   &-like.active {
     background: rgb(219, 219, 219);
-    color: tomato;
+    color: $main-color;
   }
   &-main {
     margin-top: 60px;
