--- a/src/scss/tags.scss
+++ b/src/scss/tags.scss
@@ -5,7 +5,7 @@
     justify-content: space-around;
     background: $color-white;
     border-radius: 20px;
-    padding: 20px 30px 50px 30px;
+    padding: 37px;
     box-shadow: $box-shadow;
     margin-bottom: 50px;
   }
