--- a/src/scss/program.scss
+++ b/src/scss/program.scss
@@ -4,7 +4,7 @@
   &-wrap {
     background: $color-white;
     border-radius: 20px;
-    padding: 20px 30px 50px 30px;
+    padding: 37px;
     box-shadow: $box-shadow;
   }
   &-header {
@@ -15,6 +15,7 @@
   }
   &-info {
     display: flex;
+    align-items: center;
     span {
       display: flex;
       align-items: center;
@@ -30,6 +31,7 @@
     font-weight: bold;
     font-size: 24px;
     color: black;
+    margin-bottom: 5px;
   }
   &-logo {
     width: 58px;
@@ -39,12 +41,6 @@
     &:hover {
       transform: scale(1.2);
     }
-  }
-  &-alike {
-    display: flex;
-    align-items: center;
-    font-weight: normal;
-    margin-top: 5px;
   }
   &-like {
     border: 1px solid $border-color;
