--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $main-color: #2196f3;
 $border-color: #a8a8a8;
 $color-white: #fff;
-$box-shadow: 10px 15px 20px rgba(0, 0, 0, 0.25);
+$box-shadow: 7px 8px 25px rgba(130, 195, 248, 0.3);
 $text-color: #4d4e58;
+$color-mobile: #ecf4f9;
