--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,12 +1,15 @@
 .header {
   color: $color-white;
   background: $main-color;
-  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 7px 8px 35px rgba(33, 150, 243, 0.3);
   padding: 15px 0;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+  .burger-btn {
+    display: none;
+  }
   &-wrap {
     display: flex;
     justify-content: space-between;
@@ -53,5 +56,77 @@
     background: #fff url('../img/search.svg') no-repeat right;
     color: $border-color;
     background-position: 200px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    position: initial;
+    background: none;
+    box-shadow: none;
+    .program-logo,
+    .program-logo img {
+      width: 32px;
+      height: 32px;
+      margin-right: 5px;
+      &:hover {
+        transform: none;
+      }
+    }
+    &-wrap {
+      justify-content: center;
+    }
+    &-nav {
+      position: fixed;
+      left: -100vw;
+      top: 0;
+      flex-direction: column;
+      justify-content: center;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(52, 212, 251, 0.9);
+      transition: 0.4s;
+      z-index: 500;
+    }
+    &-nav.active {
+      left: 0;
+    }
+    &-link {
+      font-size: 17px;
+      margin-bottom: 40px;
+      margin-right: 0;
+      text-decoration: none;
+      color: $color-mobile;
+      &::after {
+        content: '';
+        display: none;
+        height: 0px;
+      }
+    }
+    &-title {
+      font-size: 20px;
+      color: $text-color;
+    }
+    &-input {
+      position: absolute;
+      right: 15px;
+      padding: 0;
+      width: 44px;
+      height: 40px;
+      border-radius: 14px;
+      background: $color-mobile url('../img/search.svg') no-repeat center;
+      color: $border-color;
+      transition: 0.4s;
+      &::placeholder {
+        opacity: 0;
+      }
+    }
+    &-input.active {
+      width: 250px;
+      background-position: right;
+      background-position: 210px;
+      padding-left: 10px;
+      padding-right: 50px;
+    }
   }
 }
