--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -5,7 +5,6 @@
 
   &-carousel {
     border-radius: 20px;
-    box-shadow: $box-shadow;
     overflow: hidden;
     max-width: 635px;
     max-height: 360px;
@@ -15,7 +14,6 @@
   }
   &-nav {
     display: flex;
-    margin-top: 20px;
   }
   &-button-nav {
     border-radius: 50%;
@@ -23,6 +21,7 @@
     width: 13px;
     margin-right: 17px;
     background: #fff;
+    border: 0.5px solid #2196f3;
   }
   &-button-nav.active {
     background: $main-color;
@@ -44,5 +43,27 @@
   }
   .slide.active {
     display: block;
+  }
+}
+
+@media (max-width: 768px) {
+  .slider {
+    margin-top: 60px;
+
+    &-carousel {
+      border-radius: 10px;
+      box-shadow: $box-shadow;
+      overflow: hidden;
+      max-width: 290px;
+      max-height: 174px;
+      box-shadow: none;
+      img {
+        width: 290px;
+        height: 174px;
+      }
+    }
+    &-nav {
+      margin-top: 20px;
+    }
   }
 }
