--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -29,25 +29,36 @@
 
 @media (max-width: 768px) {
   .footer {
+    font-family: 'Montserrat';
     background: $color-mobile;
     font-size: 12px;
     &-wrap {
       text-align: center;
       padding: 0;
+      max-width: 343px;
     }
     &-mail {
       font-size: 12px;
       flex-wrap: wrap;
       font-weight: normal;
       color: #504e4e;
+      font-weight: 500;
       span {
         flex-basis: 100%;
+        margin-bottom: 10px;
+      }
+      img {
+        margin-right: 12px;
       }
     }
     &-text {
       color: $border-color;
       margin-bottom: 20px;
-      min-width: 243px;
+      line-height: 16px;
+    }
+    .adaptive {
+      max-width: 230px;
+      margin: 0 auto 20px auto;
     }
   }
 }
