--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -84,7 +84,7 @@
       justify-content: center;
       width: 100vw;
       height: 100vh;
-      background: rgba(52, 212, 251, 0.9);
+      background: #333;
       transition: 0.4s;
       z-index: 500;
     }
