--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -34,6 +34,7 @@ body {
 @media (max-width: 768px) {
   body {
     background: $color-white;
+    overflow-x: hidden;
   }
   .container {
     padding: 15px;
