--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -33,6 +33,7 @@
     background: $color-mobile;
     font-size: 12px;
     &-wrap {
+      margin: 0 auto;
       text-align: center;
       padding: 0;
       max-width: 343px;
