fix like, description

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -122,10 +122,10 @@
       }
     }
     &-input.active {
-      width: 250px;
+      width: 90vw;
       background-position: right;
-      background-position: 210px;
-      padding-left: 10px;
+      background-position: 290px;
+      padding-left: 50px;
       padding-right: 50px;
     }
   }
