--- a/src/scss/program.scss
+++ b/src/scss/program.scss
@@ -14,6 +14,15 @@
     align-items: center;
     font-size: 14px;
   }
+  &-licence {
+    text-align: center;
+    font-size: 16px;
+    color: $text-color;
+    margin-top: 20px;
+    p {
+      margin: 5px;
+    }
+  }
   &-info {
     display: flex;
     align-items: center;
@@ -89,7 +98,7 @@
     border-collapse: collapse;
     border-spacing: 0;
     color: $text-color;
-    margin-top: 22px;
+    margin-top: 45px;
   }
   tr {
     display: table-row;
