--- a/src/scss/program.scss
+++ b/src/scss/program.scss
@@ -62,6 +62,9 @@
     width: 90px;
     height: 37px;
     font-size: 16px;
+    background: $color-white;
+    border: none;
+    outline: none;
     cursor: pointer;
     &__img {
       transition: 0.2s;
