--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import '~normalize.css';
 @import '~animate.css';
 @import '_variables';
-@import 'slider';
 @import 'header';
+@import 'search';
+@import 'advantages';
 @import 'burger';
 @import 'program';
+@import 'slider';
 @import 'tags';
 @import 'footer';
 
@@ -19,6 +24,11 @@ h2,
 h3 {
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: $color-white;
 }
 
 body {
